# jingwei

./: .gitignore  .pre-commit-config.yaml  README.md  package.json  pnpm-lock.yaml  pyproject.toml
docs/: index.md
docs/.vitepress/: config.mts
docs/docs/: index.md
docs/reinforcement_learning/basic/: mdp.md  modeling_and_abstraction_for_MDPs.md
docs/reinforcement_learning/basic/policy_based/: actor_critic.md  index.md  policy_gradients.md  policy_iteration.md
docs/reinforcement_learning/basic/value_based/: index.md  mcts.md  multi_armed_bandit.md  n_step_td.md  td.md  value_iteration.md
docs/reinforcement_learning/multi_agent_rl/: extensive_form_game.md  multi_agent_games.md  multi_agent_rl.md  normal_form_game.md
examples/a2c/: demo.py
examples/dqn/: demo.py
examples/nvwa/: example_a2c.py  example_ddpg.py  example_dqn.py  example_npg.py  example_pg.py  example_ppo.py  example_sac.py  example_trpo.py
examples/ppo/: demo.py
src/jingwei/: __init__.py  trainner.py
src/jingwei/actor/: __init__.py  base.py  continous.py  discrete.py
src/jingwei/agent/: a2c.py  base.py  dqn.py  ppo.py
src/jingwei/algorithm/: base.py
src/jingwei/algorithm/model_free/: ppo.py
src/jingwei/application/algorithm/: base.py
src/jingwei/buffer/: replay_buffer.py  rollout_buffer.py
src/jingwei/critic/: __init__.py  base.py  critic.py
src/jingwei/data/: __init__.py  batch.py  transition.py
src/jingwei/data/buffer/: __init__.py  base.py
src/jingwei/distributions/: categorical.py  gaussian.py
src/jingwei/domain/: __init__.py  actor.py  agent.py  buffer.py  distribution.py
src/jingwei/domain/actor/: base.py
src/jingwei/domain/agent/: base.py
src/jingwei/domain/critic/: base.py
src/jingwei/domain/distributions/: base.py
src/jingwei/domain/experience/: base.py
src/jingwei/experience/: base.py
src/jingwei/infra/: __init__.py  data_wrapper.py  framework.py  mtype.py  typing.py
src/jingwei/infra/buffer/: base.py  replay_buffer.py
src/jingwei/infra/functional/: __init__.py  torch.py
src/jingwei/infra/layers/: mlp.py
src/jingwei/infra/utils/: __init__.py  env.py
src/jingwei/infra/wrapper/: __init__.py  base.py  data_wrapper.py
src/jingwei/protocol/: __init__.py  actor.py  agent.py  critic.py  rollout.py  trainer.py  wrapper.py
src/jingwei/protocol/data/: __init__.py  batch.py  buffer.py  transition.py
src/jingwei/replay_buffer/: base.py
src/jingwei/rollout/: base.py
src/jingwei/trait/actor/: base.py
src/jingwei/trait/agent/: base.py
src/jingwei/trait/critic/: base.py
src/jingwei/transitions/: base.py
src/nvwa/: __init__.py
src/nvwa/actor/: __init__.py  actor.py  base.py  q_actor.py
src/nvwa/agent/: __init__.py  a2c.py  base.py  ddpg.py  dqn.py  npg.py  off_policy.py  on_policy.py  pg.py  ppo.py  sac.py  trpo.py
src/nvwa/algorithm/: __init__.py  a2c.py  base.py  dqn.py  npg.py  off_policy.py  on_policy.py  pg.py  ppo.py  trpo.py
src/nvwa/critic/: __init__.py  base.py
src/nvwa/data/: __init__.py  base.py  batch.py  buffer.py  transition.py
src/nvwa/distributions/: __init__.py  base.py  categorical.py  gaussian.py
src/nvwa/infra/: __init__.py  functional.py  tracking.py  wrapper.py
src/nvwa/infra/module/: __init__.py  policy_net.py  q_value_net.py  value_net.py
src/nvwa/trainer/: __init__.py  base.py  off_policy_trainer.py  on_policy_trainer.py  rollout.py
tests/data/: test_buffer.py  test_data.py
tests/infra/: test_typing.py
tests/infra/functional/: test_torch.py
tests/infra/wrapper/: test_data_wrapper.py
tests/jingwei/data/: test_buffer.py
tests/jingwei/infra/utils/: test_env.py
tests/nvwa/: test_transition.py
tests/nvwa/data/: test_batch.py  test_transition.py
tests/nvwa/distribution/: test_distribution.py
tests/nvwa/infra/: test_functional.py  test_wrapper.py
