[project]
name = "jingwei"
version = "0.1.0"
description = "又北二百里，曰发鸠之山，其上多柘木，有鸟焉，其状如乌，文首，白喙，赤足，名曰：“精卫”，其鸣自詨。是炎帝之少女，名曰女娃。女娃游于东海，溺而不返，故为精卫，常衔西山之木石，以堙于东海。漳水出焉，东流注于河。"
authors = [{ name = "ZheyangXu", email = "jishengxzy@hotmail.com" }]
dependencies = [
    "gymnasium[all]>=1.0.0",
    "numpy>=2.1.3",
    "dynaconf>=3.2.6",
    "torch>=2.5.1",
]

requires-python = ">=3.12"
readme          = "README.md"
license         = { text = "MIT" }

[project.optional-dependencies]
paddle = [
    "paddlepaddle>=2.6.2",
]

[build-system]
requires      = ["pdm-backend"]
build-backend = "pdm.backend"

[dependency-groups]
test = ["pytest>=8.3.4"]
lint = [
    "black>=24.10.0",
    "isort>=5.13.2",
    "ruff>=0.8.2",
]

[project.urls]
Homepage      = "https://zheyangxu.github.io/jingwei/"
Repository    = "https://github.com/ZheyangXu/jingwei"
Documentation = "https://zheyangxu.github.io/jingwei/docs/"

[tool.black]
line-length    = 100
target-version = ["py312"]

[tool.isort]
atomic                 = true
profile                = "black"
src_paths              = ["src", "tests"]
extra_standard_library = ["typing_extensions"]
indent                 = 4
lines_after_imports    = 2
multi_line_output      = 3

[tool.ruff.lint]
select = [
    "ASYNC",
    "B",
    "C4",
    "C90",
    "COM",
    "D",
    "DTZ",
    "E",
    "F",
    "FLY",
    "G",
    "I",
    "ISC",
    "PIE",
    "PLC",
    "PLE",
    "PLW",
    "RET",
    "RUF",
    "RSE",
    "SIM",
    "TID",
    "UP",
    "W",
    "YTT",
]
ignore = [
    "SIM118", # Needed b/c iter(batch) != iter(batch.keys()). See https://github.com/thu-ml/tianshou/issues/922
    "E501",   # line too long. black does a good enough job
    "E741",   # variable names like "l". this isn't a huge problem
    "B008",   # do not perform function calls in argument defaults. we do this sometimes
    "B011",   # assert false. we don't use python -O
    "B028",   # we don't need explicit stacklevel for warnings
    "D100",
    "D101",
    "D102",
    "D104",
    "D105",
    "D107",
    "D203",
    "D213",
    "D401",
    "D402",   # docstring stuff
    "DTZ005", # we don't need that
    # remaining rules from https://github.com/psf/black/blob/main/.flake8 (except W503)
    # this is a simplified version of config, making vscode plugin happy
    "E402",
    "E501",
    "E701",
    "E731",
    "C408",
    "E203",
    # Logging statement uses f-string warning
    "G004",
    # Unnecessary `elif` after `return` statement
    "RET505",
    "D106",    # undocumented public nested class
    "D205",    # blank line after summary (prevents summary-only docstrings, which makes no sense)
    "D212",    # no blank line after """. This clashes with sphinx for multiline descriptions of :param: that start directly after """
    "PLW2901", # overwrite vars in loop
    "B027",    # empty and non-abstract method in abstract class
    "D404",    # It's fine to start with "This" in docstrings
    "D407",
    "D408",
    "D409",    # Ruff rules for underlines under 'Example:' and so clash with Sphinx  
]
unfixable = [
    "F841", # unused variable. ruff keeps the call, but mostly we want to get rid of it all
    "F601", # automatic fix might obscure issue
    "F602", # automatic fix might obscure issue
    "B018", # automatic fix might obscure issue
]
extend-fixable = [
    "F401", # unused import
    "B905", # bugbear
]

[tool.pdm]
distribution = true

[tool.pdm.scripts]
lint   = "ruff check"
test   = "pytest"
format = "black src/jingwei"
all    = { composite = ["format", "lint", "test"] }

