[project]
name = "jingwei"
version = "0.1.0"
description = "又北二百里，曰发鸠之山，其上多柘木，有鸟焉，其状如乌，文首，白喙，赤足，名曰：“精卫”，其鸣自詨。是炎帝之少女，名曰女娃。女娃游于东海，溺而不返，故为精卫，常衔西山之木石，以堙于东海。漳水出焉，东流注于河。"
authors = [{ name = "ZheyangXu", email = "jishengxzy@hotmail.com" }]
dependencies = [
    "gymnasium[all]>=1.0.0",
    "numpy>=2.1.3",
    "dynaconf>=3.2.6",
    "torch>=2.5.1",
]

requires-python = ">=3.12"
readme          = "README.md"
license         = { text = "MIT" }

[project.optional-dependencies]
paddle = ["paddlepaddle>=2.6.2"]

[build-system]
requires      = ["pdm-backend"]
build-backend = "pdm.backend"

[dependency-groups]
test = [
    "pytest>=8.3.4",
    "coverage>=7.6.9",
]
lint = [
    "black>=24.10.0",
    "isort>=5.13.2",
    "ruff>=0.8.2",
]

[project.urls]
Homepage      = "https://zheyangxu.github.io/jingwei/"
Repository    = "https://github.com/ZheyangXu/jingwei"
Documentation = "https://zheyangxu.github.io/jingwei/docs/"

[tool.black]
line-length    = 100
target-version = ["py312"]

[tool.isort]
atomic                 = true
profile                = "black"
src_paths              = ["src", "tests"]
extra_standard_library = ["typing_extensions"]
indent                 = 4
lines_after_imports    = 2
multi_line_output      = 3

[tool.ruff]
lint.select = ["C", "E", "F", "I", "W"]
lint.ignore = ["C901", "E501", "E741", "F402", "F823"]
lint.isort  = { lines-after-imports = 2 }

[tool.ruff.format]
quote-style               = "double"
indent-style              = "space"
skip-magic-trailing-comma = false
line-ending               = "auto"


[tool.pdm]
distribution = true

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.pdm.scripts]
lint     = "ruff check"
test     = "pytest"
format   = "black src/jingwei"
coverage = "coverage run --source=src -m pytest -v tests"
all      = { composite = ["format", "lint", "test"] }
