[project]
name = "jingwei"
version = "0.1.0"
description = "又北二百里，曰发鸠之山，其上多柘木，有鸟焉，其状如乌，文首，白喙，赤足，名曰：“精卫”，其鸣自詨。是炎帝之少女，名曰女娃。女娃游于东海，溺而不返，故为精卫，常衔西山之木石，以堙于东海。漳水出焉，东流注于河。"
authors = [{ name = "ZheyangXu", email = "jishengxzy@hotmail.com" }]
dependencies = [
    "gymnasium>=1.1.1",
    "numpy>=2.2.3",
    "dynaconf>=3.2.10",
    "torch>=2.6.0",
]

requires-python = ">=3.12"
readme          = "README.md"
license         = { text = "MIT" }

[project.optional-dependencies]
paddle = ["paddlepaddle>=2.6.2"]
cuda = [
    "nvidia-cublas-cu12>=12.8.4.1",
    "nvidia-cuda-cupti-cu12>=12.8.90",
    "nvidia-cuda-nvrtc-cu12>=12.8.93",
    "nvidia-cuda-runtime-cu12>=12.8.90",
    "nvidia-cudnn-cu12>=9.8.0.87",
    "nvidia-cufft-cu12>=11.3.3.83",
    "nvidia-curand-cu12>=10.3.9.90",
    "nvidia-cusolver-cu12>=11.7.3.90",
    "nvidia-cusparse-cu12>=12.5.8.93",
    "nvidia-nccl-cu12>=2.25.1",
    "nvidia-nvtx-cu12>=12.8.90",
    "triton>=3.2.0",
]

[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
test = [
    "pytest>=8.3.5",
    "coverage>=7.6.12",
]
lint = [
    "black>=25.1.0",
    "isort>=6.0.1",
    "ruff>=0.9.10",
]

[tool.pdm.resolution]
# Prevent unnecessary runtime libraries from being installed
excludes = [
    "nvidia-cublas-cu12",
    "nvidia-cuda-cupti-cu12",
    "nvidia-cuda-nvrtc-cu12",
    "nvidia-cuda-runtime-cu12",
    "nvidia-cudnn-cu12",
    "nvidia-cufft-cu12",
    "nvidia-curand-cu12",
    "nvidia-cusolver-cu12",
    "nvidia-cusparse-cu12",
    "nvidia-nccl-cu12",
    "nvidia-nvtx-cu12",
    "triton",
]

[project.urls]
Homepage      = "https://zheyangxu.github.io/jingwei/"
Repository    = "https://github.com/ZheyangXu/jingwei"
Documentation = "https://zheyangxu.github.io/jingwei/docs/"

[tool.black]
line-length    = 100
target-version = ["py312"]

[tool.isort]
atomic                 = true
profile                = "black"
src_paths              = ["src", "tests"]
extra_standard_library = ["typing_extensions"]
indent                 = 4
lines_after_imports    = 2
multi_line_output      = 3

[tool.ruff]
lint.select = ["C", "E", "F", "I", "W"]
lint.ignore = ["C901", "E501", "E741", "F402", "F823"]
lint.isort  = { lines-after-imports = 2 }

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.format]
quote-style               = "double"
indent-style              = "space"
skip-magic-trailing-comma = false
line-ending               = "auto"


[tool.pdm]
distribution = true

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.pdm.scripts]
lint     = "ruff check"
test     = "pytest"
format   = "black src/jingwei"
coverage = "coverage run --source=src -m pytest -v tests"
all      = { composite = ["format", "lint", "test"] }
